Fixing image being too large.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,11 +29,12 @@ section {
 }
 
 img {
+    display: block;
     max-width: 100%;
     height: auto;
-    box-shadow: 0 0 0.5rem rgb(235, 235, 235, 0.5);
+    box-shadow: 0 0 0.5rem rgba(235, 235, 235, 0.5);
     margin: 0.5rem 0;
-    border-radius: 2rem;
+    border-radius: 1rem;
 }
 
 footer {
